[IMP] mail, {test_}mass_mailing{_sms}, sms: Option to bypass blacklist
Add an option to bypass the black list for example for transactional or
incident emails/sms.

In the mass mailing app, it is only displayed when chosing a dedicated
outgoing server (note that we keep showing it if the bypass is enabled).

In the mail and sms composer, it is always hidden but can be temporarily
displayed by modifying the view.

Task-3575361

Part-of: odoo/odoo#187403
Related: odoo/enterprise#93060
Related: odoo/upgrade#7208
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/mail/wizard/mail_compose_message_views.xml
+++ b/addons/mail/wizard/mail_compose_message_views.xml
@@ -53,7 +53,7 @@
                                 context="{'force_email': True, 'show_email': True, 'form_view_ref': 'base.view_partner_simple_form', 'forward_mode': True}"/>
                         </div>
                         <field name="subject" placeholder="e.g. Welcome to MyCompany!" required="True"/>
-                        <field name="reply_to" placeholder='Recipient Followers'
+                        <field name="reply_to" placeholder="e.g. info@company.com"
                             invisible="reply_to_mode == 'update'"
                             required="reply_to_mode != 'update'"/>
                     </group>
@@ -77,6 +77,7 @@
                             <!-- mass mailing -->
                             <field name="reply_to_force_new" invisible="1"/>
                             <field name="reply_to_mode" invisible="composition_mode != 'mass_mail'" widget="radio"/>
+                            <field name="use_exclusion_list" invisible="1"/>
                         </page>
                     </notebook>
                     <footer>
