[IMP] product: leverage related fields for single variant products
Related fields were recently upgraded, and it's now possible to group over them.

With that in mind, this commit refactors the way we handle template fields for
single variant products, to leverage related fields instead of computed ones.

This reduces the need for boilerplate code.

--- a/addons/product/views/product_template_views.xml
+++ b/addons/product/views/product_template_views.xml
@@ -6,7 +6,7 @@
         <field name="priority">10</field>
         <field name="arch" type="xml">
             <list string="Product" multi_edit="1" sample="1">
-                <field name="product_variant_count" column_invisible="True"/>
+                <field name="product_single_variant_id" column_invisible="True"/>
                 <field name="sale_ok" column_invisible="True"/>
                 <field name="currency_id" column_invisible="True"/>
                 <field name="cost_currency_id" column_invisible="True"/>
@@ -14,7 +14,7 @@
                 <field name="name" string="Product Name"/>
                 <field name="default_code" optional="show"/>
                 <field name="product_tag_ids" widget="many2many_tags" optional="hide"/>
-                <field name="barcode" optional="hide" readonly="product_variant_count != 1"/>
+                <field name="barcode" optional="hide" readonly="not product_single_variant_id"/>
                 <field name="company_id" options="{'no_create': True}"
                     groups="base.group_multi_company" optional="hide"/>
                 <field name="list_price" string="Sales Price" widget='monetary' options="{'currency_field': 'currency_id'}" optional="show" decoration-muted="not sale_ok"/>
