--- a/addons/purchase/static/src/views/purchase_dashboard.xml
+++ b/addons/purchase/static/src/views/purchase_dashboard.xml
@@ -8,7 +8,7 @@
                         <div class="g-col-1 g-col-sm-1 d-flex align-items-center py-2 justify-content-center text-break">
                             All
                         </div>
-                        <div class="g-col-10 g-col-sm-10 grid gap-1">
+                        <div class="g-col-11 g-col-sm-11 grid gap-1">
                             <div class="g-col-2 p-0" t-on-click="setSearchContext" title="All Draft RFQs" filter_name="draft_rfqs">
                                 <a href="#" class="btn purchase-dashboard-card"
                                     t-attf-class="{{ purchaseData['global']['draft']['all'] == 0 ? 'btn btn-secondary' : 'btn btn-info' }}">
@@ -44,7 +44,7 @@
                         <div class="g-col-1 g-col-sm-1 d-flex align-items-center py-2 justify-content-center text-break">
                             My
                         </div>
-                        <div class="g-col-10 g-col-sm-10 grid gap-1 pt-2">
+                        <div class="g-col-11 g-col-sm-11 grid gap-1 pt-2">
                             <div class="g-col-2 p-0" t-on-click="setSearchContext" title="My Draft RFQs" filter_name="draft_rfqs,my_purchases">
                                 <a href="#" class="btn purchase-dashboard-card"
                                     t-attf-class="{{ purchaseData['my']['draft']['all'] == 0 ? 'btn btn-secondary' : 'btn btn-info' }}">
@@ -77,41 +77,31 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-7 col-xl-6 col-xxl-4 flex-shrink-0">
-                    <div class="d-flex flex-column justify-content-between gap-2 h-100">
-                        <div class="grid gap-2 h-100">
-                            <div class="g-col-6 g-col-md-6 grid gap-1 gap-md-4">
-                                <div class="g-col-12 g-col-sm-4 g-col-lg-6 d-flex align-items-center justify-content-center text-center justify-content-md-end text-md-end mt-4 mt-sm-0 text-break">
-                                    Avg Order Value
-                                </div>
-                                <div class="g-col-12 g-col-sm-8 g-col-lg-5 d-flex align-items-center justify-content-center py-2 bg-100">
-                                    <span><t t-out="purchaseData['all_avg_order_value']"/></span>
-                                </div>
-                            </div>
-                            <div class="g-col-6 g-col-md-6 grid gap-1 gap-md-4">
-                                <div class="g-col-12 g-col-sm-4 g-col-lg-6 d-flex align-items-center py-2 justify-content-center text-center justify-content-md-end text-md-end mt-4 mt-sm-0 text-break">
-                                    Purchased Last 7 Days
-                                </div>
-                                <div class="g-col-12 g-col-sm-8 g-col-lg-6 d-flex align-items-center justify-content-center py-2 bg-100">
-                                    <span><t t-out="purchaseData['all_total_last_7_days']"/></span>
+                <div class="col-12 col-lg-2 col-xl-2 col-xxl-2 flex-shrink-0">
+                    <div class="grid gap-4">
+                        <div class="g-col-12 g-col-sm-12 grid gap-1">
+                            <div class="g-col-6 p-0" id="left_grid"/>
+                            <div class="g-col-6 p-0" title="All Days to Order">
+                                <div class="btn purchase-dashboard-card o_no_hover"
+                                    t-attf-class="{{
+                                        purchaseData['days_to_purchase'] and
+                                        purchaseData['global']['days_to_order'] > purchaseData['days_to_purchase']
+                                        ? 'btn btn-warning' : 'btn btn-secondary' }}">
+                                    <div class="fs-2" t-out="purchaseData['global']['days_to_order']"/>Days to Order
                                 </div>
                             </div>
                         </div>
-                        <div class="grid gap-2 h-100">
-                            <div class="g-col-6 g-col-md-6 grid gap-1 gap-md-4">
-                                <div class="g-col-12 g-col-sm-4 g-col-lg-6 d-flex align-items-center justify-content-center text-center justify-content-md-end text-md-end mt-4 mt-sm-0 text-break">
-                                    Lead Time to Purchase
-                                </div>
-                                <div class="g-col-12 g-col-sm-8 g-col-lg-5 d-flex align-items-center justify-content-center py-2 bg-100">
-                                    <span><t t-out="purchaseData['all_avg_days_to_purchase']"/> &#160;Days</span>
-                                </div>
-                            </div>
-                            <div class="g-col-6 g-col-md-6 grid gap-1 gap-md-4">
-                                <div class="g-col-12 g-col-md-4 g-col-sm-4 g-col-lg-6 d-flex align-items-center justify-content-center text-center justify-content-md-end text-md-end mt-4 mt-sm-0 text-break">
-                                    RFQs Sent Last 7 Days
-                                </div>
-                                <div class="g-col-12 g-col-sm-8 g-col-lg-6 d-flex align-items-center justify-content-center py-2 bg-100">
-                                    <span><t t-out="purchaseData['all_sent_rfqs']"/></span>
+                    </div>
+                    <div class="grid gap-4 pt-2">
+                        <div class="g-col-12 g-col-sm-12 grid gap-1">
+                            <div class="g-col-6 p-0" id="left_grid"/>
+                            <div class="g-col-6 p-0" title="All Days to Order">
+                                <div class="btn purchase-dashboard-card o_no_hover"
+                                    t-attf-class="{{
+                                        purchaseData['days_to_purchase'] and
+                                        purchaseData['global']['days_to_order'] > purchaseData['days_to_purchase']
+                                        ? 'btn btn-warning' : 'btn btn-secondary' }}">
+                                    <div t-out="purchaseData['my']['days_to_order']"/>
                                 </div>
                             </div>
                         </div>
