[IMP] website: use better t-cache for website footer
Commit [1] modified the t-cache of the footer to fix a bug, by making it
consider the footer_visible field that website.page records can use. It
did it weirdly though: adding the whole website.page record to the
t-cache entry without justification. Meaning: it was cached individually
for all website.page, but only once for the rest of the website.

This commit makes it base on the footer_visible field directly, thus
needing only two entries in the cache (other t-cache entries aside)...
at least until proven otherwise?

This also prepares the next commit which extends the use of the
footer_visible field beyond website.page records.

[1]: https://github.com/odoo/odoo/commit/da007eabdf85d7cd357595b4dbec0e2c3b63a10a

task-3430319

Part-of: odoo/odoo#159897
Signed-off-by: Quentin Smetz (qsm) <qsm@odoo.com>

--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -231,10 +231,7 @@
         <attribute name="data-name">Footer</attribute>
         <!-- Background now controlled by css configuration, using color combinations -->
         <attribute name="t-attf-class" add="o_colored_level o_cc" remove="bg-light" separator=" "/>
-        <!-- Add the main object as a cache key so that the footer_visible page
-        option is properly reflected across pages. Controllers and other objects
-        do not have any page option (yet) so they can share the same cache -->
-        <attribute name="t-cache" add="website,main_object._name == 'website.page' and main_object"/>
+        <attribute name="t-cache" add="website" separator=","/>
     </xpath>
     <xpath expr="//div[hasclass('o_footer_copyright')]" position="attributes">
         <attribute name="data-name">Copyright</attribute>
@@ -339,6 +336,7 @@
     <xpath expr="//footer[@id='bottom']" position="attributes">
         <attribute name="t-attf-class" add="#{'d-none o_snippet_invisible' if 'footer_visible' in main_object and not main_object.footer_visible else ''}" separator=" "/>
         <attribute name="t-att-data-invisible">'1' if 'footer_visible' in main_object and not main_object.footer_visible else None</attribute>
+        <attribute name="t-cache" add="main_object.footer_visible if 'footer_visible' in main_object else True" separator=","/>
     </xpath>
 </template>
 
