[IMP] website: add privacy policy page by default
To help users meet GDPR requirements, automatically create a privacy
policy page when a European customer creates a new website.

Previously, this was possible via the website configurator, but the page
content was generic and required user modification.

This commit updates the default privacy policy page content.
The privacy page is no longer selectable in the configurator features
but is automatically created for new websites in Europe.
(Is in Europe if the country of the company of the website is in Europe)

This commit updates test 'test_01_configurator_translation' that
previously used the privacy policy page feature from the configurator
(which was removed in a previous commit).
It also adds a unit test to verify that a privacy page is correctly
created for EU websites but not for non-EU websites.

task-4551879

--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -2130,6 +2130,14 @@
     </xpath>
 </template>
 
+<template id="footer_copyright_private_policy" inherit_id="website.layout" active="False">
+    <xpath expr="//footer//span[hasclass('o_footer_copyright_name')]" position="after">
+        <span style="vertical-align: middle;">
+            <a href="/privacy">Privacy Policy</a>
+        </span>
+    </xpath>
+</template>
+
 <!-- Scroll to Top option -->
 <template id="option_footer_scrolltop" inherit_id="website.layout" active="False">
     <xpath expr="//div[@id='footer']" position="after">
