--- a/addons/purchase/report/purchase_quotation_templates.xml
+++ b/addons/purchase/report/purchase_quotation_templates.xml
@@ -13,6 +13,10 @@
                 <strong>Shipping address:</strong>
                 <div t-field="o.dest_address_id"
                     t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}' name="purchase_shipping_address"/>
+                <div>
+                    <strong>Requested Ship Date:</strong>
+                    <span t-field="o.date_planned" t-options="{'date_only': 'true'}"/>
+                </div>
             </t>
         </t>
         <div class="page">
