--- a/addons/purchase_stock/report/purchase_report_templates.xml
+++ b/addons/purchase_stock/report/purchase_report_templates.xml
@@ -34,6 +34,10 @@
                         <span t-field="o.picking_type_id.warehouse_id.name"/>
                         <div t-field="o.picking_type_id.warehouse_id.partner_id" t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
                     </div>
+                    <div>
+                        <strong>Requested Ship Date:</strong>
+                        <span t-field="o.date_planned" t-options="{'date_only': 'true'}"/>
+                    </div>
                 </t>
             </t>
         </xpath>
