[IMP] im_livechat: allow more choices for enabling the chatbot
Live chat rules determine how both the live chat and chatbot should
behave based on different conditions, such as the presence of an
operator or the page where the chat is embedded.

Previously, there was an option to display the chatbot only when no
operator was available. However, this option was too restrictive, and
we would like to offer more customization.

This PR updates the option to allow selecting from three choices:
"Always", "Only when no operator is available", or "Only when an
operator is available".

task-4574961

closes odoo/odoo#197597

Related: odoo/upgrade#7221
Signed-off-by: Sébastien Theys (seb) <seb@odoo.com>

--- a/addons/im_livechat/views/im_livechat_channel_views.xml
+++ b/addons/im_livechat/views/im_livechat_channel_views.xml
@@ -226,10 +226,7 @@
                                 <field name="chatbot_script_id" class="oe_inline" style="width: 60% !important;"
                                        options="{'no_create': True, 'no_open': True}"/>
                             </div>
-                            <label for="chatbot_only_if_no_operator" class="oe_inline" invisible="not chatbot_script_id" string="Enabled only if no operator"/>
-                            <div class="oe_inline" invisible="not chatbot_script_id">
-                                <field name="chatbot_only_if_no_operator"/>
-                            </div>
+                            <field name="chatbot_enabled_condition" invisible="not chatbot_script_id" widget="radio"/>
                             <field name="regex_url" placeholder="e.g. /contactus"/>
                             <label for="auto_popup_timer" class="oe_inline" invisible="action != 'auto_popup'"/>
                             <div class="oe_inline" invisible="action != 'auto_popup'">
